--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   },
   "devDependencies": {
     "apollo-boost": "^0.1.4",
-    "react-table": "^6.8.2",
     "apollo-link-http": "^1.5.4",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.1",
@@ -20,7 +19,9 @@
     "react-apollo": "^2.1.3",
     "react-content-loader": "^3.1.1",
     "react-dom": "^16.3.2",
+    "react-table": "^6.8.2",
     "semantic-ui-react": "^0.79.1",
+    "uuid": "^3.2.1",
     "victory": "^0.26.0"
   }
 }
