--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "real-estate-admin",
   "description": "",
   "dependencies": {
+    "@material-ui/icons": "^1.0.0-beta.43",
+    "classnames": "^2.2.5",
     "next": "latest"
   },
   "scripts": {
@@ -14,7 +16,10 @@
     "apollo-link-http": "^1.5.4",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.1",
+    "jss": "latest",
+    "material-ui": "next",
     "node-fetch": "^2.1.2",
+    "prop-types": "latest",
     "react": "^16.3.2",
     "react-apollo": "^2.1.3",
     "react-content-loader": "^3.1.1",
