--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "dependencies": {
     "@material-ui/icons": "^1.0.0-beta.43",
     "classnames": "^2.2.5",
-    "next": "latest"
+    "google-map-react": "^1.0.1",
+    "leaflet": "^1.3.1",
+    "next": "latest",
+    "react-leaflet": "^1.9.1"
   },
   "scripts": {
     "dev": "next",
