--- a/package.json
+++ b/package.json
@@ -4,10 +4,7 @@
   "dependencies": {
     "@material-ui/icons": "^1.0.0-beta.43",
     "classnames": "^2.2.5",
-    "google-map-react": "^1.0.1",
-    "leaflet": "^1.3.1",
-    "next": "latest",
-    "react-leaflet": "^1.9.1"
+    "next": "^6.0.3"
   },
   "scripts": {
     "dev": "next",
@@ -17,6 +14,7 @@
   "devDependencies": {
     "apollo-boost": "^0.1.4",
     "apollo-link-http": "^1.5.4",
+    "downshift": "^1.31.14",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.1",
     "jss": "latest",
